Tricky Question's implementation Improved
